# MEPHI-masters-diploma

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
core/: config.py  logging.py  root_path.py
create_embeddings/: ebedding_encoding.ipynb  utils.py
create_embeddings/schemas/: embedding.py  embedding_model.py
db_populate/: embeddings.py  models.py  payload_model.py  products.py  quadrant_client.py  session.py
django_mapper/: apps.py  constants.py  models.py  service.py  urls.py  utils.py  views.py
django_mapper/migrations/: 0002_alter_product_properties_as_text.py  0003_match.py  0004_match_llm_insurance_match_llm_map_match_llm_raw_and_more.py  0005_remove_match_llm_insurance_remove_match_llm_map_and_more.py
django_mapper/schemas/: mapper_progress.py  product_suggestions.py
django_mapper/templates/django_mapper/: mapper.html
django_ui/: apps.py  urls.py  views.py
django_ui/plots_and_reports/: plots.ipynb  report.ipynb  simlpe_report.xlsx
django_ui/static/: logo2.kra
django_ui/templates/: base.html  data_page.html  mapping_page.html  mapping_schedule_form.html  report_page.html
django_web/: asgi.py  settings.py  urls.py  wsgi.py
django_web/django_web/: settings.py  urls.py
django_web/mapper/: models.py  urls.py  views.py
django_web/mapper/migrations/: 0001_initial.py  0002_alter_product_properties_as_text.py
llm/: auto_matcher.py  rnd.py
llm/compare_two/: latest.py  v1.py
paper/: benchmarking_text_embeddings.ipynb  benchmarking_vector_db.ipynb  term_3_perfomance_embeddings_benchmarking.ipynb
parsers/runnures/obi/: get_top_categories.py  parser.py  (+1 more)
(+16 files in other folders)
