[tool.poetry]
name = "diploma"
version = "0.1.0"
description = ""
authors = ["roman.kuzmin <roman.kuzmin@sheverev.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
