[tool.poetry]
name = "diploma"
version = "0.1.0"
description = ""
authors = ["roman.kuzmin <roman.kuzmin@sheverev.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pydantic = "^2.9.2"
beautifulsoup4 = "^4.12.3"
django = "^5.1.2"
psycopg = {extras = ["binary", "pool"], version = "^3.2.3"}
sqlacodegen-v2 = "^0.1.4"
pydantic-settings = "^2.6.0"
pandas = "^2.2.3"
qdrant-client = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
